[project]
name = "docker-healthcheck-exporter"
version = "0.1.0"
description = "Publish Prometheus metrics for docker healthchecks"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "markdown>=3.8",
    "prometheus-client>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
